
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sched_param {int sched_priority; } ;


 int SCHED_FIFO ;
 int sched_get_priority_max (int ) ;
 int sched_setscheduler (int ,int ,struct sched_param*) ;

int main(){
struct sched_param lol;
lol.sched_priority = sched_get_priority_max(SCHED_FIFO);
sched_setscheduler(0,SCHED_FIFO,&lol);
for(;;){}
}
